vlib/v/checker/tests/array_void_init.vv
fn main() {
	_ := [_, _]
}
